--- a/deploy/ansible/ansible.cfg
+++ b/deploy/ansible/ansible.cfg
@@ -2,6 +2,10 @@
 inventory = inventory.ini
 host_key_checking = False
 retry_files_enabled = False
+# Use minimal stdout callback for better terminal scrolling
+stdout_callback = yaml
+# Display timestamps for better tracking
+callback_whitelist = profile_tasks, timer
 
 [ssh_connection]
 pipelining = True
