Replace telegrambots-client with custom DTOs and Spring HTTP Interface
- Remove telegrambots-client dependency (eliminates Jackson 2.x vs 3.x conflict)
- Create custom Telegram DTOs with public constructors for webhook reception
- Implement TelegramApiClient using Spring HTTP Interface with RestClient
- Update TelegramBotService to use custom DTOs and HTTP Interface
- Add comprehensive controller tests (6 test cases)
- All 724 tests passing

Benefits:
- No more Jackson version conflicts
- Simpler, more maintainable code
- Better control over serialization
- Modern Spring 6.1+ HTTP Interface approach

--- a/pom.xml
+++ b/pom.xml
@@ -86,12 +86,7 @@
 			<artifactId>google-cloud-vision</artifactId>
 			<version>3.55.0</version>
 		</dependency>
-		<!-- Telegram Bot API -->
-		<dependency>
-			<groupId>org.telegram</groupId>
-			<artifactId>telegrambots-client</artifactId>
-			<version>8.0.0</version>
-		</dependency>
+		<!-- Telegram Bot API: Using custom DTOs and Spring HTTP Interface instead of telegrambots-client -->
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
