feat: Enable Google Cloud Vision for receipt OCR
- Add Ansible task to upload GCP credentials in deploy.yml
- Update application.properties template to use lowercase boolean values
- Fix Jinja2 boolean rendering (True/False -> true/false)
- Add application.properties regeneration in deploy.yml
- Simplify GCP config: only need local file path, server path auto-generated
- Update documentation with GCP setup instructions
- Applied to both google_cloud_vision_enabled and telegram_bot_enabled properties

The deployment now automatically:
1. Uploads GCP credentials from local machine to server
2. Configures application with Vision API enabled
3. Restarts app with OCR capabilities

Users only need to set:
- google_cloud_vision_enabled: true
- google_cloud_credentials_file: path/to/local/key.json

--- a/deploy/ansible/deploy.yml
+++ b/deploy/ansible/deploy.yml
@@ -52,6 +52,26 @@
         state: stopped
       ignore_errors: yes
 
+    - name: Upload Google Cloud credentials (if enabled and file exists locally)
+      ansible.builtin.copy:
+        src: "{{ google_cloud_credentials_file }}"
+        dest: "/opt/{{ app_name }}/gcp-credentials.json"
+        owner: "{{ app_user }}"
+        group: "{{ app_user }}"
+        mode: "0600"
+      when:
+        - google_cloud_vision_enabled | default(false)
+        - google_cloud_credentials_file is defined
+        - google_cloud_credentials_file | length > 0
+
+    - name: Update application configuration
+      ansible.builtin.template:
+        src: "{{ playbook_dir }}/roles/app/templates/application.properties.j2"
+        dest: "/opt/{{ app_name }}/application.properties"
+        owner: "{{ app_user }}"
+        group: "{{ app_user }}"
+        mode: "0600"
+
     - name: Copy jar to server
       ansible.builtin.copy:
         src: "{{ jar_files.files[0].path }}"
