--- a/deploy/ansible/roles/app/tasks/main.yml
+++ b/deploy/ansible/roles/app/tasks/main.yml
@@ -22,6 +22,19 @@
     group: "{{ app_user }}"
     mode: "0755"
 
+- name: Upload Google Cloud credentials (if enabled and file exists locally)
+  ansible.builtin.copy:
+    src: "{{ google_cloud_credentials_file }}"
+    dest: "/opt/{{ app_name }}/gcp-credentials.json"
+    owner: "{{ app_user }}"
+    group: "{{ app_user }}"
+    mode: "0600"
+  when:
+    - google_cloud_vision_enabled | default(false)
+    - google_cloud_credentials_file is defined
+    - google_cloud_credentials_file | length > 0
+  notify: restart app
+
 - name: Create application configuration
   ansible.builtin.template:
     src: application.properties.j2
