fix: Correct property name to disable OSS Index Analyzer
Changed from 'ossIndexEnabled' to 'ossIndexAnalyzerEnabled' which is the correct property name for OWASP dependency-check-maven plugin. Also removed command-line overrides in GitHub Actions workflow to ensure pom.xml configuration is respected.

The ossIndexAnalyzerEnabled=false will prevent the analyzer from attempting to contact ossindex.sonatype.org, eliminating 401 Unauthorized and rate limit errors.

--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,8 @@
 					</formats>
 					<nvdApiKey>${env.NVD_API_KEY}</nvdApiKey>
 					<suppressionFile>dependency-check-suppressions.xml</suppressionFile>
-					<ossIndexEnabled>false</ossIndexEnabled>
+					<!-- Disable Sonatype OSS Index to avoid 401/rate limit errors -->
+					<ossIndexAnalyzerEnabled>false</ossIndexAnalyzerEnabled>
 				</configuration>
 			</plugin>
 			<!-- SpotBugs with FindSecBugs for static security analysis
